# ArcSat

./: .env.example  .gitignore  CNAME  DEPLOY.md  FAVICONS.md  GERAR_FAVICONS.md  GITHUB_SECRETS.md  GOOGLE_MAPS_SETUP.md  README.md  TESTE_LOCAL.md  app.js  browserconfig.xml  generate-favicons.html  generate-favicons.js  index.html  mock-data.js  site.webmanifest  wrangler.toml
.github/workflows/: api-deploy.yml  backup.yml  deploy.yml
telemetry/: .gitignore  API_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  Readme.md  STRUCTURE.md
telemetry/.github/workflows/: ci.yml
telemetry/benches/: time_series_bench.rs
telemetry/examples/: anomaly_detection.rs  basic_operations.rs  decomposition.rs  feature_engineering.rs  forecasting.rs
telemetry/src/: anomaly.rs  decomposition.rs  features.rs  forecasting.rs  lib.rs  models.rs  time_series.rs
telemetry/src/models/: arima.rs
telemetry/tests/: integration_test.rs
